--- a/timer/timer.css
+++ b/timer/timer.css
@@ -1,1 +1,60 @@
+body{
+	text-align: center;
+    font-family: verdana,arial,helvetica,sans-serif;
+  font-weight: 100;
+}
 
+h1{
+  color: #b01;
+  font-weight: 100;
+  font-size: 20px;
+  margin: 0px 0px 12px;
+}
+
+#clockdiv{
+	color: ff0;
+	display: inline-block;
+	font-weight: 100;
+	text-align: center;
+	font-size: 20px;
+}
+
+#clockdiv > div{
+	padding: 1.5px;
+	border-radius: 4px;
+    background: #c4c2c2;
+	display: inline-block;
+}
+
+#clockdiv div > span{
+	padding: 10px;
+   color: #ff3434;
+	border-radius: 3px;
+	background: #fff;
+	display: inline-block;
+}
+
+.smalltext{
+  color: black;
+	padding-top: 8x;
+	font-size: 15px;
+}
+
+
+
+#message{
+  color: #b01;
+	padding-top: 5px;
+	font-size: 14px;
+}
+
+.displayblock{
+    background: #f0efef;
+    border-radius: 2px;
+    margin-bottom: 10px;
+    width: 400px;
+    position: relative;
+    box-shadow: 0 1px 3px rgba(0,0.12)
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    padding: 5px;
+}
