--- a/timer/timer.css
+++ b/timer/timer.css
@@ -1,3 +1,7 @@
+/*
+    适用CC BY-SA 3.0
+    https://viken-k.github.io/Hour-meter/css/timer.css/ 页面 CSS
+*/
 body{
 	text-align: center;
     font-family: verdana,arial,helvetica,sans-serif;
